--- a/benchmark/configs/femnist/conf.yml
+++ b/benchmark/configs/femnist/conf.yml
@@ -2,13 +2,13 @@
 
 # ========== Cluster configuration ========== 
 # ip address of the parameter server (need 1 GPU process)
-ps_ip: localhost
+ps_ip: 10.0.0.1
 
 # ip address of each worker:# of available gpus process on each gpu in this node
 # Note that if we collocate ps and worker on same GPU, then we need to decrease this number of available processes on that GPU by 1
 # E.g., master node has 4 available processes, then 1 for the ps, and worker should be set to: worker:3
 worker_ips: 
-    - localhost:[2]
+    - 10.0.0.1:[2]
 
 exp_path: $FEDSCALE_HOME/fedscale/core
 
@@ -50,5 +50,5 @@ job_conf:
     - batch_size: 20
     - test_bsz: 20
     - malicious_factor: 4
-    - use_cuda: False
+    - use_cuda: True
 
