add speech task

--- a/docker/config.yml
+++ b/docker/config.yml
@@ -35,6 +35,7 @@ setup_commands:
 job_conf: 
     - job_name: speech                   # Generate logs under this folder: log_path/job_name/time_stamp
     - log_path: $FEDSCALE_HOME/benchmark # Path of log files
+    - task: speech
     - num_participants: 200                      # Number of participants per round, we use K=100 in our paper, large K will be much slower
     - data_set: google_speech                     # Dataset: openImg, google_speech, stackoverflow
     - data_dir: $FEDSCALE_HOME/benchmark/dataset/data/google_speech    # Path of the dataset
