--- a/docker/config.yml
+++ b/docker/config.yml
@@ -32,7 +32,7 @@ job_conf:
     - job_name: openimage                   # Generate logs under this folder: log_path/job_name/time_stamp
     - log_path: $FEDSCALE_HOME/benchmark # Path of log files
     - num_participants: 200                      # Number of participants per round, we use K=100 in our paper, large K will be much slower
-    - data_set: openImg                     # Dataset: openImg, google_speech, stackoverflow
+    - data_set: open_images                     # Dataset: openImg, google_speech, stackoverflow
     - data_dir: $FEDSCALE_HOME/benchmark/dataset/data/openimage    # Path of the dataset
     - data_map_file: $FEDSCALE_HOME/benchmark/dataset/data/openimage/client_data_mapping/train.csv              # Allocation of data to each client, turn to iid setting if not provided
     - device_conf_file: $FEDSCALE_HOME/benchmark/dataset/data/device_info/client_device_capacity     # Path of the client trace
