--- a/docker/config.yml
+++ b/docker/config.yml
@@ -9,10 +9,10 @@ ps_ip: 10.0.0.1
 # E.g., master node has 4 available processes, then 1 for the ps, and worker should be set to: worker:3
 worker_ips: 
     - 10.0.0.1:[4]
-    - 10.0.0.2:[4]
-    - 10.0.0.3:[4]
-    - 10.0.0.4:[4]
-    - 10.0.0.5:[4]
+    # - 10.0.0.2:[4]
+    # - 10.0.0.3:[4]
+    # - 10.0.0.4:[4]
+    # - 10.0.0.5:[4]
 
 exp_path: $FEDSCALE_HOME/fedscale/core
 
@@ -42,7 +42,7 @@ job_conf:
     - data_map_file: $FEDSCALE_HOME/benchmark/dataset/data/google_speech/client_data_mapping/train.csv              # Allocation of data to each client, turn to iid setting if not provided
     - device_conf_file: $FEDSCALE_HOME/benchmark/dataset/data/device_info/client_device_capacity     # Path of the client trace
     - device_avail_file: $FEDSCALE_HOME/benchmark/dataset/data/device_info/client_behave_trace
-    - model: mobilenet_v2                            # Models: e.g., shufflenet_v2_x2_0, mobilenet_v2, resnet34, albert-base-v2
+    - model: mobilenet                            # Models: e.g., shufflenet_v2_x2_0, mobilenet_v2, resnet34, albert-base-v2
     - gradient_policy: fed-avg                 # {"fed-yogi", "fed-prox", "fed-avg"}, "fed-avg" by default
     - eval_interval: 5                     # How many rounds to run a testing on the testing set
     - rounds: 5000                          # Number of rounds to run this training. We use 1000 in our paper, while it may converge w/ ~400 rounds
