--- a/docker/config.yml
+++ b/docker/config.yml
@@ -49,12 +49,13 @@ job_conf:
     - rounds: 5000                          # Number of rounds to run this training. We use 1000 in our paper, while it may converge w/ ~400 rounds
     - filter_less: 21                       # Remove clients w/ less than 21 samples
     - num_loaders: 0
-    - local_steps: 20
-    - learning_rate: 0.001
-    - batch_size: 32
+    - local_steps: 5
+    - learning_rate: 0.1
+    - batch_size: 10
     - test_bsz: 32
     - use_cuda: False
     - candidate_capacity: 8
     - convergent_threshold: 0
     - gradient_buffer_length: 5
+    - use_epoch: True
 
