--- a/docker/config.yml
+++ b/docker/config.yml
@@ -8,7 +8,7 @@ ps_ip: 10.0.0.1
 # Note that if we collocate ps and worker on same GPU, then we need to decrease this number of available processes on that GPU by 1
 # E.g., master node has 4 available processes, then 1 for the ps, and worker should be set to: worker:3
 worker_ips: 
-    - 10.0.0.1:[4,4,4,4]
+    - 10.0.0.1:[25,25]
 
 exp_path: $FEDSCALE_HOME/fedscale/core
 
@@ -29,26 +29,30 @@ setup_commands:
 # Default parameters are specified in config_parser.py, wherein more description of the parameter can be found
 
 job_conf: 
-    - job_name: openimage                   # Generate logs under this folder: log_path/job_name/time_stamp
+    - job_name: femnist                   # Generate logs under this folder: log_path/job_name/time_stamp
     - log_path: $FEDSCALE_HOME/benchmark # Path of log files
-    - num_participants: 200                      # Number of participants per round, we use K=100 in our paper, large K will be much slower
-    - data_set: openImg                     # Dataset: openImg, google_speech, stackoverflow
-    - data_dir: $FEDSCALE_HOME/benchmark/dataset/data/openImg    # Path of the dataset
-    - data_map_file: $FEDSCALE_HOME/benchmark/dataset/data/openImg/client_data_mapping/train.csv              # Allocation of data to each client, turn to iid setting if not provided
+    - num_participants: 100                      # Number of participants per round, we use K=100 in our paper, large K will be much slower
+    - data_set: femnist                     # Dataset: openImg, google_speech, stackoverflow
+    - data_dir: $FEDSCALE_HOME/benchmark/dataset/data/femnist    # Path of the dataset
+    - data_map_file: $FEDSCALE_HOME/benchmark/dataset/data/femnist/client_data_mapping/train.csv              # Allocation of data to each client, turn to iid setting if not provided
     - device_conf_file: $FEDSCALE_HOME/benchmark/dataset/data/device_info/client_device_capacity     # Path of the client trace
     - device_avail_file: $FEDSCALE_HOME/benchmark/dataset/data/device_info/client_behave_trace
-    - model: mobilenet_v2                            # Models: e.g., shufflenet_v2_x2_0, mobilenet_v2, resnet34, albert-base-v2
+    - model: nasbench201_0                            # Models: e.g., shufflenet_v2_x2_0, mobilenet_v2, resnet34, albert-base-v2
+    - model_name: model_7
     - gradient_policy: fed-avg                 # {"fed-yogi", "fed-prox", "fed-avg"}, "fed-avg" by default
     - eval_interval: 5                     # How many rounds to run a testing on the testing set
     - rounds: 5000                          # Number of rounds to run this training. We use 1000 in our paper, while it may converge w/ ~400 rounds
     - filter_less: 21                       # Remove clients w/ less than 21 samples
-    - num_loaders: 0
+    - num_loaders: 1
     - local_steps: 20
-    - learning_rate: 0.05
+    - learning_rate: 0.01
     - batch_size: 20
     - test_bsz: 20
     - use_cuda: True
-    - candidate_capacity: 8
-    - convergent_threshold: 0.001
+    - candidate_capacity: 1
+    - convergent_threshold: 0.0001
     - gradient_buffer_length: 5
-
+    - nas: True
+    - mode: train
+    - selected_ratio: 0.9
+    # - selected_layers: cells.1.downsample.1.0.0,cells.1.downsample.1.2.0
