--- a/evofed/configs/server.yml
+++ b/evofed/configs/server.yml
@@ -1,10 +1,10 @@
-model_source: load # fedscale, load, or nasbench201
-model_path: model_1,model_2,model_3
-aggregate_mode: normal # normal or soft
+model_source: nasbench201 # fedscale, load, or nasbench201
+model_path: model_0_r,model_1_r,model_2_r
+aggregate_mode: soft # normal or soft
 transform_criterion: converge
 converge_M: 100
-converge_N: 10
-converge_C: 0
+converge_N: 100
+converge_C: 0.001
 drop_C: 0.0001
 layer_selection_alpha: 0.9
 seed: 2333
