--- a/docker/config.yml
+++ b/docker/config.yml
@@ -8,7 +8,7 @@ ps_ip: 10.0.0.1
 # Note that if we collocate ps and worker on same GPU, then we need to decrease this number of available processes on that GPU by 1
 # E.g., master node has 4 available processes, then 1 for the ps, and worker should be set to: worker:3
 worker_ips: 
-    - 10.0.0.1:[25,25]
+    - 10.0.0.1:[8,8,8,8]
 
 exp_path: $FEDSCALE_HOME/fedscale/core
 
@@ -38,12 +38,12 @@ job_conf:
     - device_conf_file: $FEDSCALE_HOME/benchmark/dataset/data/device_info/client_device_capacity     # Path of the client trace
     - device_avail_file: $FEDSCALE_HOME/benchmark/dataset/data/device_info/client_behave_trace
     - model: nasbench201_0                            # Models: e.g., shufflenet_v2_x2_0, mobilenet_v2, resnet34, albert-base-v2
-    - model_name: model_7
+    - model_name: None
     - gradient_policy: fed-avg                 # {"fed-yogi", "fed-prox", "fed-avg"}, "fed-avg" by default
     - eval_interval: 5                     # How many rounds to run a testing on the testing set
     - rounds: 5000                          # Number of rounds to run this training. We use 1000 in our paper, while it may converge w/ ~400 rounds
     - filter_less: 21                       # Remove clients w/ less than 21 samples
-    - num_loaders: 1
+    - num_loaders: 0
     - local_steps: 20
     - learning_rate: 0.01
     - batch_size: 20
@@ -53,6 +53,8 @@ job_conf:
     - convergent_threshold: 0.0001
     - gradient_buffer_length: 5
     - nas: True
-    - mode: train
+    - mode: train-trans
     - selected_ratio: 0.9
+    - converge_M: 100
+    - converge_N: 10
     # - selected_layers: cells.1.downsample.1.0.0,cells.1.downsample.1.2.0
