--- a/docker/config.yml
+++ b/docker/config.yml
@@ -51,6 +51,9 @@ job_conf:
     - use_cuda: True
     - candidate_capacity: 1
     - convergent_threshold: 0.0001
+    - transform_threshold: 0.001
+    - window_N = 10
+    - step_M = 100
     - gradient_buffer_length: 5
     - nas: True
     - mode: train
