--- a/docker/config.yml
+++ b/docker/config.yml
@@ -52,8 +52,8 @@ job_conf:
     - candidate_capacity: 1
     - convergent_threshold: 0.0001
     - transform_threshold: 0.001
-    - window_N = 10
-    - step_M = 100
+    - window_N: 10
+    - step_M: 100
     - gradient_buffer_length: 5
     - nas: True
     # - mode: from_scratch # from_one, from_multiple
