--- a/docker/config.yml
+++ b/docker/config.yml
@@ -35,6 +35,7 @@ job_conf:
     - data_set: femnist                     # Dataset: openImg, google_speech, stackoverflow
     - data_dir: $FEDSCALE_HOME/benchmark/dataset/data/femnist    # Path of the dataset
     - data_map_file: $FEDSCALE_HOME/benchmark/dataset/data/femnist/client_data_mapping/train.csv              # Allocation of data to each client, turn to iid setting if not provided
+    - test_data_map_file: $FEDSCALE_HOME/benchmark/dataset/data/femnist/client_data_mapping/test.csv
     - device_conf_file: $FEDSCALE_HOME/benchmark/dataset/data/device_info/client_device_capacity     # Path of the client trace
     - device_avail_file: $FEDSCALE_HOME/benchmark/dataset/data/device_info/client_behave_trace
     - device_cap_file: $FEDSCALE_HOME/benchmark/device_cap/femnist/resnet18-uniform.csv
@@ -43,12 +44,12 @@ job_conf:
     - gradient_policy: fed-avg                 # {"fed-yogi", "fed-prox", "fed-avg"}, "fed-avg" by default
     - eval_interval: 5                     # How many rounds to run a testing on the testing set
     - rounds: 5000                          # Number of rounds to run this training. We use 1000 in our paper, while it may converge w/ ~400 rounds
-    - filter_less: 21                       # Remove clients w/ less than 21 samples
+    - filter_less: 51                       # Remove clients w/ less than 21 samples
     - num_loaders: 0
     - local_steps: 20
     - learning_rate: 0.01
     - batch_size: 20
-    - test_bsz: 20
+    - test_bsz: 5
     - use_cuda: True
     - candidate_capacity: 1
     - convergent_threshold: 0.0001
