--- a/docker/config.yml
+++ b/docker/config.yml
@@ -2,16 +2,14 @@
 
 # ========== Cluster configuration ========== 
 # ip address of the parameter server (need 1 GPU process)
-ps_ip: 10.0.0.1
+ps_ip: 10.0.0.2
 
 # ip address of each worker:# of available gpus process on each gpu in this node
 # Note that if we collocate ps and worker on same GPU, then we need to decrease this number of available processes on that GPU by 1
 # E.g., master node has 4 available processes, then 1 for the ps, and worker should be set to: worker:3
 worker_ips: 
-    - 10.0.0.1:[8]
-    - 10.0.0.2:[8]
-    - 10.0.0.3:[8]
-    - 10.0.0.4:[8]
+    - 10.0.0.2:[1,1,1,1]
+    - 10.0.0.1:[1,1,1,1]
 
 exp_path: $FEDSCALE_HOME/fedscale/core
 
@@ -32,27 +30,27 @@ setup_commands:
 # Default parameters are specified in config_parser.py, wherein more description of the parameter can be found
 
 job_conf: 
-    - job_name: femnist                   # Generate logs under this folder: log_path/job_name/time_stamp
+    - job_name: openimg                   # Generate logs under this folder: log_path/job_name/time_stamp
     - log_path: $FEDSCALE_HOME/benchmark # Path of log files
     - num_participants: 100                      # Number of participants per round, we use K=100 in our paper, large K will be much slower
-    - data_set: femnist                     # Dataset: openImg, google_speech, stackoverflow
-    - data_dir: $FEDSCALE_HOME/benchmark/dataset/data/femnist    # Path of the dataset
-    - data_map_file: $FEDSCALE_HOME/benchmark/dataset/data/femnist/client_data_mapping/train.csv              # Allocation of data to each client, turn to iid setting if not provided
-    - test_data_map_file: $FEDSCALE_HOME/benchmark/dataset/data/femnist/client_data_mapping/test.csv
+    - data_set: openImg                     # Dataset: openImg, google_speech, stackoverflow
+    - data_dir: $FEDSCALE_HOME/benchmark/dataset/data/openImg    # Path of the dataset
+    - data_map_file: $FEDSCALE_HOME/benchmark/dataset/data/openImg/client_data_mapping/train.csv              # Allocation of data to each client, turn to iid setting if not provided
+    - test_data_map_file: $FEDSCALE_HOME/benchmark/dataset/data/openImg/client_data_mapping/test.csv
     - device_conf_file: $FEDSCALE_HOME/benchmark/dataset/data/device_info/client_device_capacity     # Path of the client trace
     - device_avail_file: $FEDSCALE_HOME/benchmark/dataset/data/device_info/client_behave_trace
-    - device_cap_file: $FEDSCALE_HOME/benchmark/device_cap/femnist_cap/resnet18-uniform.csv
-    - model: nasbench201_0                            # Models: e.g., shufflenet_v2_x2_0, mobilenet_v2, resnet34, albert-base-v2
+    - device_cap_file: $FEDSCALE_HOME/benchmark/device_cap/openimage_cap/resnet34-uniform.csv
+    - model: nasbench201_1_1                            # Models: e.g., shufflenet_v2_x2_0, mobilenet_v2, resnet34, albert-base-v2
     - model_name: None
     - model_zoo: evofed-zoo
     - gradient_policy: fed-avg                 # {"fed-yogi", "fed-prox", "fed-avg"}, "fed-avg" by default
-    - eval_interval: 20                     # How many rounds to run a testing on the testing set
+    - eval_interval: 50                     # How many rounds to run a testing on the testing set
     - rounds: 5000                          # Number of rounds to run this training. We use 1000 in our paper, while it may converge w/ ~400 rounds
-    - filter_less: 51                       # Remove clients w/ less than 21 samples
-    - num_loaders: 0
-    - local_steps: 20
+    - filter_less: 21                       # Remove clients w/ less than 21 samples
+    - num_loaders: 1
+    - local_steps: 40
     - learning_rate: 0.01
-    - batch_size: 20
+    - batch_size: 5
     - test_bsz: 5
     - use_cuda: True
     - candidate_capacity: 1
@@ -61,10 +59,11 @@ job_conf:
     - window_N: 10
     - step_M: 100
     - gradient_buffer_length: 5
-    - nas: True
+    - nas: False
     # - mode: from_scratch # from_one, from_multiple
     - selected_ratio: 0.9
     - step_M: 100
     - window_N: 10
     - soft_agg: True
+    - starting_width_scale: 16
     # - selected_layers: cells.1.downsample.1.0.0,cells.1.downsample.1.2.0
