--- a/docker/speech.yml
+++ b/docker/speech.yml
@@ -41,12 +41,12 @@ job_conf:
     - device_avail_file: $FEDSCALE_HOME/benchmark/dataset/data/device_info/client_behave_trace
     - device_cap_file: $FEDSCALE_HOME/benchmark/device_cap/speech_cap/resnet34_speech-normal.csv
     - model: resnet34                            # Models: e.g., shufflenet_v2_x2_0, mobilenet_v2, resnet34, albert-base-v2
-    - model_name: model_0
+    - model_name: heterofl_speech/model_4
     - model_zoo: torchcv
     - gradient_policy: fed-avg                 # {"fed-yogi", "fed-prox", "fed-avg"}, "fed-avg" by default
     - eval_interval: 10                     # How many rounds to run a testing on the testing set
     - client_eval_interval: 10
-    - rounds: 12                          # Number of rounds to run this training. We use 1000 in our paper, while it may converge w/ ~400 rounds
+    - rounds: 3                          # Number of rounds to run this training. We use 1000 in our paper, while it may converge w/ ~400 rounds
     - filter_less: 21                       # Remove clients w/ less than 21 samples
     - num_loaders: 1
     - local_training: step
@@ -57,7 +57,7 @@ job_conf:
     - use_cuda: True
     - candidate_capacity: 1
     - convergent_threshold: 0.0001
-    - transform_threshold: 0.001
+    - transform_threshold: 0
     - window_N: 10
     - step_M: 100
     - gradient_buffer_length: 5
@@ -66,7 +66,7 @@ job_conf:
     - selected_ratio: 0.9
     - step_M: 20
     - window_N: 10
-    - soft_agg: True
+    - soft_agg: False
     - starting_width_scale: 1
     # - decay_factor: 0.99
     # - selected_layers: cells.1.downsample.1.0.0,cells.1.downsample.1.2.0
